[package]
name = "Solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"]}
futures = "0.3"
json = "0.12.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.79"